# AIMAX004_V1_codex

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  vercel.json
api/cron/: agent-reach.js  collect.js  suggest.js
api/editorial/: drafts.js
api/lib/: claude.js  collectionSchedule.js  cronAuth.js  googleNews.js  naver.js  openai.js  openaiModels.js  policySources.js  slack.js  supabase.js
api/operations/: schedule.js
api/research/: briefs.js
deploy/n8n/: .env.example  Caddyfile  README.md  backup.sh  deploy.ps1  docker-compose.yml  health-check.sh  restore.sh
docs/: OPERATING_STANDARD.md  admin-login.html  auth-session.js  coanews-draft.html  coanews-draft.schema.json  editorial-drafts.html  index.html  research-briefs.html  vps-collector.html
n8n/: README.md  docker-compose.yml  workflow_agent_reach_collect.json  workflow_collect.json  workflow_suggest.json
scripts/: agent-reach-collect.js  agent-reach-runner.js  bootstrap-vps.sh  keyword-selection.js  research-query-taxonomy.js
src/policy_article_collector/: __init__.py  app.py  cli.py  collector.py  dedupe.py  exporters.py  extract.py  models.py  sources.py
supabase/: schema.sql
supabase/migrations/: 20260712_research_metadata.sql  (+4 more)
tests/: test_agent_reach_options.js  test_agent_reach_runner.js  test_collection_schedule.js  test_dashboard_auth.js  test_editorial_workflow.js  test_extraction.py  test_keyword_dashboard.js  test_openai_models.js  test_operating_standard.js  test_ops_health.js  test_research_briefs.js  test_research_metadata.js  test_research_query_taxonomy.js
(+8 files in other folders)
