[project]
name = "policy-article-collector"
version = "0.1.0"
description = "Standalone Korean policy article collector with progressive fetch strategies and a small admin UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.7.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
policy-collector = "policy_article_collector.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]